--- a/css/style.css
+++ b/css/style.css
@@ -144,12 +144,32 @@ flex-direction: column;
     background-color: #cbcbff;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 2rem;
+    border-radius: .8rem;
 }
 
-#form label{
-    padding-left: 20px;
+#form input{
+    width: 30%;
+    right: 20%;
+    box-sizing: border-box;
+    padding-left: 1%;
+    margin-right: 5%;
+    margin-left: 11%;
+    border-radius: 2rem;
+    height: 1.7rem;
+    margin-bottom: 15px;
 }
+
+#form p{
+ margin-left: 5%;
+ font-size: 2rem;
+}
+
+#submit{
+    position: inherit;
+    left: 50% !important;
+    margin-left: 35% !important;
+}
+
 
 .layer1 {
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
